# cot-analyzer

./: .gitignore  README.md  cot_analyzer.py  cot_build_rater_kit.py  cot_report.py  cot_score_human.py  pyproject.toml
.github/workflows/: gate.yml
examples/: sample_input.jsonl  sample_results.jsonl
tests/: test_analyzer.py
