[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cot-analyzer"
version = "0.1.0"
description = "A faithfulness analyzer for chain-of-thought and agent recordings: detect, diagnose, and direct when a model's public output launders the real driver of its decision."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Bryan McManus" }]
keywords = ["llm", "evaluation", "chain-of-thought", "faithfulness", "agent-oversight", "ai-evaluation", "ci-gate"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Keyless core is stdlib-only; the optional --llm layer uses urllib (also stdlib).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
cot-analyzer = "cot_analyzer:main"
cot-report = "cot_report:main"

[project.urls]
Homepage = "https://github.com/BryanMcManusAI/cot-analyzer"
Source = "https://github.com/BryanMcManusAI/cot-analyzer"

[tool.setuptools]
py-modules = ["cot_analyzer", "cot_report", "cot_build_rater_kit", "cot_score_human"]
